Integrated Mobile and UI automation