@@ -20,34 +20,36 @@
 
 package io.virtualan.cucumblan.core;
 
-import io.cucumber.datatable.DataTable;
+import io.appium.java_client.AppiumDriver;
 import io.cucumber.java.After;
 import io.cucumber.java.Before;
 import io.cucumber.java.Scenario;
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.Then;
+import io.virtualan.cucumblan.mobile.AppiumServer;
 import io.virtualan.cucumblan.props.ApplicationConfiguration;
+import io.virtualan.cucumblan.props.util.MobileHelper;
 import io.virtualan.cucumblan.props.util.StepDefinitionHelper;
 import io.virtualan.cucumblan.props.util.UIHelper;
 import io.virtualan.cucumblan.ui.action.Action;
 import io.virtualan.cucumblan.ui.core.PageElement;
 import io.virtualan.cucumblan.ui.core.PagePropLoader;
+
+import java.lang.reflect.InvocationTargetException;
+import java.net.URL;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Logger;
 import org.junit.jupiter.api.Assertions;
-import org.openqa.selenium.By;
-import org.openqa.selenium.OutputType;
-import org.openqa.selenium.TakesScreenshot;
-import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebElement;
+import org.openqa.selenium.*;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.firefox.FirefoxDriver;
+import org.openqa.selenium.remote.CapabilityType;
+import org.openqa.selenium.remote.DesiredCapabilities;
 import org.reflections.Reflections;
 import org.reflections.scanners.SubTypesScanner;
 
@@ -60,6 +62,7 @@ public class UIBaseStepDefinition {
 
   private final static Logger LOGGER = Logger.getLogger(UIBaseStepDefinition.class.getName());
   private static Map<String, Action> actionProcessorMap = new HashMap<>();
+  private AppiumServer appiumServer;
 
   static {
     loadActionProcessors();
@@ -84,11 +87,9 @@ public class UIBaseStepDefinition {
     buildInclasses.stream().forEach(x -> {
       Action action = null;
       try {
-        action = x.newInstance();
+        action = x.getDeclaredConstructor().newInstance();
         actionProcessorMap.put(action.getType(), action);
-      } catch (InstantiationException e) {
-        LOGGER.warning("Unable to process this action (" + action.getType() + ") class: " + action);
-      } catch (IllegalAccessException e) {
+      } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
         LOGGER.warning("Unable to process this action (" + action.getType() + ") class: " + action);
       }
     });
@@ -117,7 +118,7 @@ public class UIBaseStepDefinition {
      * @param resource   the url
      */
   @Given("Load driver (.*) and url on (.*)$")
-  public void loadDriverAndURL(String driverName, String resource) {
+  public void loadDriverAndURL(String driverName, String resource) throws Exception {
     switch (driverName) {
       case "CHROME":
         System.setProperty("webdriver.chrome.driver", "conf/chromedriver.exe");
@@ -126,17 +127,46 @@ public class UIBaseStepDefinition {
         //chromeOptions.addArguments("--headless", "--window-size=1920,1200");
         webDriver = new ChromeDriver(chromeOptions);
         webDriver.manage().timeouts().implicitlyWait(10, TimeUnit.SECONDS);
+        loadUrl(resource);
         break;
       case "FIREFOX":
         webDriver = new FirefoxDriver();
         webDriver.manage().window().maximize();
+        loadUrl(resource);
         break;
       case "ANDROID":
-
+        try {
+          appiumServer  = new AppiumServer();
+          if (!appiumServer.checkIfServerIsRunnning(MobileHelper.getMobilePort())) {
+            appiumServer.startServer( resource, "ANDROID");
+            appiumServer.stopServer();
+          } else {
+            LOGGER.warning("Appium Server already running on Port - " + MobileHelper.getMobilePort());
+          }
+        } catch (Exception e) {
+        }
+        webDriver = appiumServer.startServer( resource, "ANDROID");
+        break;
+      case "IOS":
+        try {
+          appiumServer  = new AppiumServer();
+          if (!appiumServer.checkIfServerIsRunnning(MobileHelper.getMobilePort())) {
+            appiumServer.startServer( resource, "ANDROID");
+            appiumServer.stopServer();
+          } else {
+            LOGGER.warning("Appium Server already running on Port - " + MobileHelper.getMobilePort());
+          }
+        } catch (Exception e) {
+        }
+        webDriver = appiumServer.startServer(resource, "IOS");
         break;
       default:
         throw new IllegalArgumentException("Browser \"" + driverName + "\" isn't supported.");
     }
+    LOGGER.info(" Device connection established");
+  }
+
+  private void loadUrl(String resource) {
     String url = UIHelper.getUrl(resource);
     if (url == null) {
       scenario.log("Url missing for " + resource);
@@ -235,7 +265,7 @@ public class UIBaseStepDefinition {
    */
   public void actionProcessor(String key, String value, PageElement element)
       throws InterruptedException {
-    WebElement webelement = webDriver.findElement(By.xpath(element.getXPath()));
+    WebElement webelement = webDriver.findElement(element.findElement());
     Action action = actionProcessorMap.get(element.getAction());
     action.perform(webDriver, key, webelement, value);
   }
@@ -249,6 +279,9 @@ public class UIBaseStepDefinition {
       webDriver.close();
     } else {
       LOGGER.warning(" Driver not loaded/Closed : ");
+    }
+    if (appiumServer != null) {
+      appiumServer.stopServer();
     }
   }
 
